[tool.poetry]
name = "game-quake-arena"
version = "0.0.1"
description = ""
authors = ["Felipe Savaris"]
readme = "README.md"
packages = [{include = "game_quake_arena"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"
httpx = "^0.24.1"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
blue = "^0.9.1"
isort = "^5.12.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-vv --color=yes"
testpaths = [
    "tests",
]
